--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -1,16 +1,4 @@
-.hi{
-    height:40px;
-}
-.test{
-    height: 20px;
-}
-.test-hi{
-    min-height: auto;
-    font: optional;
-}
-.test>p{
-    height: inherit;
-}
-.test{
-    word-wrap: none;
+.card-blog-item{
+    margin-top:50px;
+    
 }
