--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -1,3 +1,18 @@
+<div class="mt-4">
+  <div class="row">
 
 
-<h1>HOME PAGE </h1>
+      {{#each blogPosts}}
+    <div class="col-sm-4 col-lg-4">
+      <div class="card" style="width: 18rem;">
+        <img class="card-img-top card-blog-item" src="{{this.imge}}" alt="Card image cap" />
+        <div class="card-body">
+          <h5 class="card-title">{{this.name}}</h5>
+          <p class="card-text">{{this.descripton}}</p>
+          <a href="#" class="btn btn-primary">View </a>
+        </div>
+      </div>
+    </div>
+     {{/each}}
+  </div>
+</div>
