--- a/src/resources/views/blogs/create.hbs
+++ b/src/resources/views/blogs/create.hbs
@@ -11,6 +11,10 @@
     <input type="text" class="form-control" id="description" name="description">
   </div>
   <div class="form-group">
+    <label for="image">Image</label>
+    <input type="text" class="form-control" id="image" name="image">
+  </div>
+  <div class="form-group">
     <label for="videoId">Video</label>
     <input type="text" class="form-control" id="videoId" name="videoId">
   </div>
