--- a/src/resources/views/blogs/show.hbs
+++ b/src/resources/views/blogs/show.hbs
@@ -8,7 +8,7 @@
         <div class="col-lg-9">
             <h2>{{blogpost.name}}</h2>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/{{blogpost.videoId}}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <p>{{blogpost.descripton}}</p>
+            <p>{{blogpost.description}}</p>
         </div>
     </div>
 </div>
