--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -6,13 +6,13 @@
     <div class="col-sm-4 col-lg-4">
       <div class="card card-blog-items" style="width: 18rem;">
         <a href="/blogs/{{this.slug}}">
-          <img class="card-img-top " src="{{this.imge}}" alt="Card image cap" />
+          <img class="card-img-top " src="{{this.image}}" alt="Card image cap"/>
         </a>
         <div class="card-body">
           <a href="/blogs/{{this.slug}}">
             <h5 class="card-title">{{this.name}}</h5>
           </a>
-          <p class="card-text">{{this.descripton}}</p>
+          <p class="card-text">{{this.description}}</p>
           <a href="#" class="btn btn-primary">View </a>
         </div>
       </div>
