--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -7,16 +7,22 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
+      {{!-- <li class="nav-item active">
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li> --}}
+       <li class="nav-item active">
+        <a class="nav-link" href="/happy">Happy</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">My Blog</a>
-      </li>
-       <li class="nav-item">
-        <a class="nav-link" href="/blogs/create">Create</a>
-      </li>
+      <li class="nav-item dropdown active">
+    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">My Blog</a>
+    <div class="dropdown-menu">
+      <a class="dropdown-item" href="/blogs/create">Create Blog</a>
+      <div class="dropdown-divider"></div>
+      <a class="dropdown-item" href="/me/manage/blogs">Manage Blog</a>
+    </div>
+  </li>
       
+       
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
