--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -1,7 +1,5 @@
-<div class="mt-4">
+<div class="">
   <div class="row">
-
-
       {{#each blogPosts}}
     <div class="col-sm-4 col-lg-4">
       <div class="card card-blog-items" style="width: 18rem;">
