--- a/src/resources/views/me/trash-blogs.hbs
+++ b/src/resources/views/me/trash-blogs.hbs
@@ -1,7 +1,7 @@
 
 
 <div class="mt-4">
-    <h1>Mange Blogs</h1>
+    <h1>Deleted Blog</h1>
     <table class="table">
   <thead>
     <tr>
@@ -12,7 +12,7 @@
     </tr>
   </thead>
   <tbody>
-    <a href="/me/trash/blogs"> thùng rác</a>
+    <a href="/me/manage/blogs">Manage blogs</a>
       {{#each blogpost}}
     <tr>
       <th scope="row">{{sum @index 1}}</th> 
@@ -20,18 +20,18 @@
       <td>{{this.description}}</td>
       <td>{{this.createdAt}}</td>
       <td>
-          <a class="btn btn-link" href="/blogs/edit/{{this._id}}">Edit </a>
+          <a class="btn btn-link btn-restore" data-id ="{{this._id}}" href="" >Restore</a>
           
       </td>
        <td>
-          <a class="btn btn-link"  href="" data-toggle="modal" data-target="#delete-blog-Modal" data-id ="{{this._id}}" >Xóa</a>  
+          <a class="btn btn-link"  href="" data-toggle="modal" data-target="#delete-blog-Modal" data-id ="{{this._id}}" >Xóa Vinh</a>  
       </td>
     </tr>
 
 
     {{else}}
     <tr class="text-center">
-      <td colspan="5"> bạn chưa thêm blog nào  <a href="/blogs/create">Thêm Blog</a> </td> 
+      <td colspan="5"> Empty Trash <a href="/me/manage/blogs">Turn back</a> </td> 
      
     </tr>
     {{/each}}
@@ -54,7 +54,7 @@
         Are you sure you want to delete this post?
       </div>
       <div class="modal-footer">
-        <button id="btn-delete-blog" type="button" class="btn btn-danger" >Delete</button>
+        <button id="btn-delete-blog" type="button" class="btn btn-danger" >Xóa vĩnh viễn</button>
          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
       </div>
     </div>
@@ -62,7 +62,8 @@
 </div>
 
 {{!--hidden form delete --}}
-<form name="delete-blog-form" method="POST"></form>
+<form name="delete-blog-form" method="post"></form>
+<form name="restore-blog-form" method="POST"></form>
 <script>
 // khi click vào nut xóa -> lấy đc id của blog --> truyền id vào nút xóa  data-id ="{{this._id}}"
 // click vào nhân dc id
@@ -73,23 +74,49 @@ document.addEventListener('DOMContentLoaded', function(){
   // khi click vào nút xóa 
   var blogId;
     var btnDeleteBlog = document.getElementById('btn-delete-blog');
-  var deleteForm = document.forms['delete-blog-form'];
+  // lấy form có name là 'delete-blog-form'
+  var deleteForm = document.forms['delete-blog-form']
   
+ var restoreForm = document.forms['restore-blog-form'];
+  var btnRestore= $('.btn-restore'); //lấy ra list btn 
+  var btnforceDelete =$('.btn-forceDelete');
+
     $('#delete-blog-Modal').on('show.bs.modal', function(event){
+
     var button= $(event.relatedTarget);
     blogId = button.data('id'); // lấy data-id trên dom 
+
   })
 
 
+
+
+//=============================
+  // RESTORE blogs 
+ //var btnRestores = document.querySelectorAll('.btn-restore')
+
+
+  btnRestore.click(function(e){
+      e.preventDefault(); // bỏ pthuc mac dinnh chua the a 
+     const blogId = $(this).data('id'); // get ra id 
+      console.log(blogId)
+      restoreForm.action = '/blogs/restore/' + blogId +'?_method=PATCH' ; // submit form với action này 
+     restoreForm.submit();
+        
+        
+  }) 
+
+// nút xóa vĩnh viễn 
   btnDeleteBlog.onclick = function(){
-    // lấy id từ modal trên
-    // set actiom chuyển hướng vài truyềnid vào 
-  // set action cho form để chuyển hướng và
-    deleteForm.action = '/blogs/' + blogId +'?_method=DELETE' ;
-    // submit form ==> submit path --> chọc vào controller
-    deleteForm.submit();
+      // lấy id từ modal trên
+      // set actiom chuyển hướng vài truyềnid vào 
+    // set action cho form để chuyển hướng và
+      deleteForm.action = '/blogs/force/' + blogId +'?_method=DELETE' ;
+      // submit form ==> submit path --> chọc vào controller
+      deleteForm.submit();
 
   }
+
 
 
 })
