count deleted posts

--- a/src/resources/views/me/manage-blogs.hbs
+++ b/src/resources/views/me/manage-blogs.hbs
@@ -12,7 +12,7 @@
     </tr>
   </thead>
   <tbody>
-    <a href="/me/trash/blogs"> thùng rác</a>
+    <a href="/me/trash/blogs"> thùng rác ({{deletedCount}})</a>
       {{#each blogpost}}
     <tr>
       <th scope="row">{{sum @index 1}}</th> 
