--- a/src/resources/views/me/trash-blogs.hbs
+++ b/src/resources/views/me/trash-blogs.hbs
@@ -1,126 +1,207 @@
+<form
+    class='mt-4'
+    name="container-Form"
+    method="POST"
+    action="/blogs/handel-form-actions">
 
+    <div class="mt-4">
+        <h1>Deleted Blog</h1>
 
-<div class="mt-4">
-    <h1>Deleted Blog</h1>
-    <table class="table">
-  <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">Name</th>
-      <th scope="col">Description</th>
-      <th scope="col" colspan="2">Deleted At</th>
-    </tr>
-  </thead>
-  <tbody>
-    <a href="/me/manage/blogs">Manage blogs</a>
-      {{#each blogpost}}
-    <tr>
-      <th scope="row">{{sum @index 1}}</th> 
-      <td>{{this.name}}</td>
-      <td>{{this.description}}</td>
-      <td>{{this.deletedAt}}</td>
-      <td>
-          <a class="btn btn-link btn-restore" data-id ="{{this._id}}" href="" >Restore</a>
-          
-      </td>
-       <td>
-          <a class="btn btn-link"  href="" data-toggle="modal" data-target="#delete-blog-Modal" data-id ="{{this._id}}" >Xóa vĩnh viễn</a>  
-      </td>
-    </tr>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th></th>
+                    <th scope="col">#</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Description</th>
+                    <th scope="col" colspan="2">Deleted At</th>
+                </tr>
+            </thead>
+            <tbody>
+                <a href="/me/manage/blogs">Manage blogs</a>
 
+                {{!-- CHECKBOX ALL --}}
+                <div class="form-check d-flex align-items-center mb-4">
+                    <div class="">
+                        <input
+                            class="form-check-input"
+                            type="checkbox"
+                            value=""
+                            name="checkbox-all"
+                            id="defaultCheck1">
+                        <label class="form-check-label" for="checkbox-all">
+                            Chọn tất cả
+                        </label>
+                    </div>
 
-    {{else}}
-    <tr class="text-center">
-      <td colspan="5"> Empty Trash <a href="/me/manage/blogs">Turn back</a> </td> 
-     
-    </tr>
-    {{/each}}
-   
-  </tbody>
-</table>
-</div>
+                    <div class="ml-4" style="">
+                        <button
+                            name='action'
+                            value='delete'
+                            type="button"
+                            class="btn btn-warning action">Delete</button>
+                        <button
+                            name='action'
+                            value='restore'
+                            type="button"
+                            class="btn btn-dange action">Restore</button>
+                    </div>
+
+                </div>
+
+                {{#each blogpost}}
+
+                    <tr>
+
+                        <td>
+                            <div class="form-check form-check-inline">
+                                <input
+                                    class="form-check-input"
+                                    type="checkbox"
+                                    name="blogItemCheckBox[]"
+                                    value="{{this._id}}">
+                                <label class="form-check-label" for="blog-item-checkbox"></label>
+                            </div>
+                        </td>
+                        <th scope="row">{{sum @index 1}}</th>
+
+                        <td>{{this.name}}</td>
+                        <td>{{this.description}}</td>
+                        <td>{{this.deletedAt}}</td>
+                        <td colspan="5" class="">
+                            <a class="btn btn-link btn-restore" data-id="{{this._id}}" href="">Restore</a>
+
+                        </td>
+                        <td>
+                            <a
+                                class="btn btn-link"
+                                href=""
+                                data-toggle="modal"
+                                data-target="#delete-blog-Modal"
+                                data-id="{{this._id}}">Xóa vĩnh viễn</a>
+                        </td>
+                    </tr>
+
+                {{else}}
+                    <tr class="text-center">
+                        <td colspan="5">
+                            Empty Trash
+                            <a href="/me/manage/blogs">Turn back</a>
+                        </td>
+
+                    </tr>
+                {{/each}}
+
+            </tbody>
+        </table>
+    </div>
+</form>
 
 <!-- Modal -->
-<div class="modal fade" id="delete-blog-Modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel" >Delete blog</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        Are you sure you want to delete this post?
-      </div>
-      <div class="modal-footer">
-        <button id="btn-delete-blog" type="button" class="btn btn-danger" >Xóa vĩnh viễn  </button>
-         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-      </div>
+<div
+    class="modal fade"
+    id="delete-blog-Modal"
+    tabindex="-1"
+    role="dialog"
+    aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Delete blog</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                Are you sure you want to delete this post?
+            </div>
+            <div class="modal-footer">
+                <button id="btn-delete-blog" type="button" class="btn btn-danger">Xóa vĩnh viễn
+                </button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
     </div>
-  </div>
 </div>
 
 {{!--hidden form delete --}}
 <form name="delete-blog-form" method="post"></form>
 <form name="restore-blog-form" method="POST"></form>
 <script>
-// khi click vào nut xóa -> lấy đc id của blog --> truyền id vào nút xóa  data-id ="{{this._id}}"
-// click vào nhân dc id
+    // khi click vào nut xóa -> lấy đc id của blog --> truyền id vào nút xóa data-id
+    // ="{{this._id}}" click vào nhân dc id khi dom load xong thì exce
+    document
+        .addEventListener('DOMContentLoaded', function () {
 
-// khi dom load xong thì exce
-document.addEventListener('DOMContentLoaded', function(){
+            // khi click vào nút xóa
+            var blogId;
+            var btnDeleteBlog = document.getElementById('btn-delete-blog');
+            // lấy form có name là 'delete-blog-form'
+            var deleteForm = document.forms['delete-blog-form']
 
-  // khi click vào nút xóa 
-  var blogId;
-    var btnDeleteBlog = document.getElementById('btn-delete-blog');
-  // lấy form có name là 'delete-blog-form'
-  var deleteForm = document.forms['delete-blog-form']
-  
- var restoreForm = document.forms['restore-blog-form'];
-  var btnRestore= $('.btn-restore'); //lấy ra list btn 
-  var btnforceDelete =$('.btn-forceDelete');
+            var restoreForm = document.forms['restore-blog-form'];
+            var btnRestore = $('.btn-restore'); //lấy ra list btn
+            var btnforceDelete = $('.btn-forceDelete');
 
-    $('#delete-blog-Modal').on('show.bs.modal', function(event){
+            $('#delete-blog-Modal').on('show.bs.modal', function (event) {
 
-    var button= $(event.relatedTarget);
-    blogId = button.data('id'); // lấy data-id trên dom 
+                var button = $(event.relatedTarget);
+                blogId = button.data('id'); // lấy data-id trên dom
 
-  })
+            })
 
+            // ============================= RESTORE blogs var btnRestores =
+            // document.querySelectorAll('.btn-restore')
 
+            btnRestore.click(function (e) {
+                e.preventDefault(); // bỏ pthuc mac dinnh chua the a
+                const blogId = $(this).data('id'); // get ra id
+                console.log(blogId)
+                restoreForm.action = '/blogs/restore/' + blogId + '?_method=PATCH'; // submit form với action này
+                restoreForm.submit();
 
+            })
 
-//=============================
-  // RESTORE blogs 
- //var btnRestores = document.querySelectorAll('.btn-restore')
+            // nút xóa vĩnh viễn
+            btnDeleteBlog.onclick = function () {
+                // lấy id từ modal trên set actiom chuyển hướng vài truyềnid vào set action cho
+                // form để chuyển hướng và
+                deleteForm.action = '/blogs/force/' + blogId + '?_method=DELETE';
+                // submit form ==> submit path --> chọc vào controller
+                deleteForm.submit();
 
+            }
 
-  btnRestore.click(function(e){
-      e.preventDefault(); // bỏ pthuc mac dinnh chua the a 
-     const blogId = $(this).data('id'); // get ra id 
-      console.log(blogId)
-      restoreForm.action = '/blogs/restore/' + blogId +'?_method=PATCH' ; // submit form với action này 
-     restoreForm.submit();
-        
-        
-  }) 
+            //======chọn tất cả ===============
+            var checkBoxAll = $("input[name='checkbox-all']")
+            var actionBtn = $('.action')
+            var blogItemCheckBox = $("input[name='blogItemCheckBox[]']")
+            var containerForm = $('forms[name="container-Form"]')
+            console.log(containerForm)
 
-// nút xóa vĩnh viễn 
-  btnDeleteBlog.onclick = function(){
-      // lấy id từ modal trên
-      // set actiom chuyển hướng vài truyềnid vào 
-    // set action cho form để chuyển hướng và
-      deleteForm.action = '/blogs/force/' + blogId +'?_method=DELETE' ;
-      // submit form ==> submit path --> chọc vào controller
-      deleteForm.submit();
+            // click vào check all
+            checkBoxAll.change(function () {
 
-  }
+                console.log('hbchjbdcece')
+                var isCheckedAll = $(this).prop('checked') // trả về true false
+                blogItemCheckBox.prop('checked', isCheckedAll)
 
+            });
 
+            blogItemCheckBox.change(function () {
+                // kiểm tra số checkbox đang có có băngf với checkbox đã check k, néu bằng thì
+                // nút checkall dc enable
+                const isCheckedAll = blogItemCheckBox.length === $("input[name='blogItemCheckBox[]']:checked").length
+                console.log(isCheckedAll)
+                checkBoxAll.prop('checked', isCheckedAll)
 
-})
+            });
+            actionBtn.click(function () {
+              containerForm.submit();
+               
+            })
 
-
-
+          
+        })
 </script>
