--- a/src/resources/views/me/trash-blogs.hbs
+++ b/src/resources/views/me/trash-blogs.hbs
@@ -1,6 +1,6 @@
 <form
     class='mt-4'
-    name="container-Form"
+    name="containerForm"
     method="POST"
     action="/blogs/handel-form-actions">
 
@@ -35,16 +35,23 @@
                     </div>
 
                     <div class="ml-4" style="">
-                        <button
+
+                        <input type="submit"
                             name='action'
-                            value='delete'
+                            value='Restore'
                             type="button"
-                            class="btn btn-warning action">Delete</button>
-                        <button
-                            name='action'
-                            value='restore'
+                            class="btn btn-secondary action " disabled="disabled"></input>
+                        <input 
+                            href=""
+                            data-toggle="modal"
+                            data-target="#delete-blog-Modal"
+                            data-id="{{this._id}}"
+                            type="submit"
+                            name="action"
+                            value='Xóa vĩnh viễn'
                             type="button"
-                            class="btn btn-dange action">Restore</button>
+                            class="btn btn-danger force-delete " disabled="disabled"></input>
+                        
                     </div>
 
                 </div>
@@ -117,7 +124,7 @@
                 Are you sure you want to delete this post?
             </div>
             <div class="modal-footer">
-                <button id="btn-delete-blog" type="button" class="btn btn-danger">Xóa vĩnh viễn
+                <button id="btn-delete-blog"  type="button" class="btn btn-danger">Xóa vĩnh viễn
                 </button>
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
             </div>
@@ -173,12 +180,16 @@
 
             }
 
+
+
+
             //======chọn tất cả ===============
             var checkBoxAll = $("input[name='checkbox-all']")
             var actionBtn = $('.action')
+            var forceDelete=$('.force-delete')
             var blogItemCheckBox = $("input[name='blogItemCheckBox[]']")
-            var containerForm = $('forms[name="container-Form"]')
-            console.log(containerForm)
+            var containerForm = $("form[name='containerForm']")
+           console.log(containerForm)
 
             // click vào check all
             checkBoxAll.change(function () {
@@ -186,22 +197,36 @@
                 console.log('hbchjbdcece')
                 var isCheckedAll = $(this).prop('checked') // trả về true false
                 blogItemCheckBox.prop('checked', isCheckedAll)
+                 renderCheckAllSubmitBtn()
 
             });
-
+            // khi click vào nút check của mỗi blog
             blogItemCheckBox.change(function () {
                 // kiểm tra số checkbox đang có có băngf với checkbox đã check k, néu bằng thì
                 // nút checkall dc enable
                 const isCheckedAll = blogItemCheckBox.length === $("input[name='blogItemCheckBox[]']:checked").length
                 console.log(isCheckedAll)
                 checkBoxAll.prop('checked', isCheckedAll)
+                renderCheckAllSubmitBtn()
 
             });
+
+            // khi click submit xóa hoạc khôi phục 
             actionBtn.click(function () {
               containerForm.submit();
-               
             })
+            function renderCheckAllSubmitBtn(){
+                var checkedCount= $("input[name='blogItemCheckBox[]']:checked").length
+                if(checkedCount>0){
+                    actionBtn.attr('disabled',false)
+                    forceDelete.attr('disabled',false)
+                    
+                } else {
+                      actionBtn.attr('disabled',true)
+                      forceDelete.attr('disabled',true)
+                }
 
+            }
           
         })
 </script>
