auto increment id

--- a/src/resources/views/me/manage-blogs.hbs
+++ b/src/resources/views/me/manage-blogs.hbs
@@ -61,7 +61,7 @@
                             </div>
 
                         </td>
-                        <th scope="row">{{sum @index 1}}</th>
+                        <th scope="row">{{this._id}}</th>
                         <td>{{this.name}}</td>
                         <td>{{this.description}}</td>
                         <td>{{this.createdAt}}</td>
