--- a/src/resources/views/me/trash-blogs.hbs
+++ b/src/resources/views/me/trash-blogs.hbs
@@ -70,8 +70,8 @@
                                 <label class="form-check-label" for="blog-item-checkbox"></label>
                             </div>
                         </td>
-                        <th scope="row">{{sum @index 1}}</th>
 
+                        <th scope="row">{{this._id}}</th>
                         <td>{{this.name}}</td>
                         <td>{{this.description}}</td>
                         <td>{{this.deletedAt}}</td>
