--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -1,7 +1,7 @@
 <div class="">
   <div class="row">
     {{#each blogPosts}}
-      <div class="col-sm-4 col-lg-4">
+      <div class="col-sm-6 col-lg-4">
         <div class="card card-blog-items" style="width: 18rem;">
           <a href="/blogs/{{this.slug}}">
             <img
@@ -15,7 +15,7 @@
               <h5 class="card-title">{{this.name}}</h5>
             </a>
             <p class="card-text">{{this.description}}</p>
-            <a href="#" class="btn btn-primary">View </a>
+            <a href="/blogs/{{this.slug}}" class="btn btn-primary">View </a>
           </div>
         </div>
       </div>
